pl 59
	- Slur now into voicegroups, and take stems into account.
	- bf: rest size in table.
	- split Slur in baseclass Bow
	- Tie, Tie_req, Tie_register

******
may 2
pl 58
	- lexer cleanup
	- national chars in lyrics
	- \stem 2; bf
	- long comments: %{ %} 
	- *.ini mode bf
	- bf: partial may be everywhere
	- bf: meterchange not at start of measure
	- some doc updates
	- bf: stem too long if stem is down.

pl 57.jcn3
	- dank je schat, voor wtk-i
	- mi2mu tries to handle rests
        - "!date" Thu May  1 02:34:04 MET DST 1997
	- maak je het niet te laat schat?
	  XXXX HWN

pl 57.jcn2
	- small toccata-fuga-E.ly fixes
	- \bar "||"; is now doublebar, "|." is finishbar
	- collision hshift fix, with on-line assistance
******
pl 57
	- lots of TODO doco
	- text alignment bugfix
	- bugfix Voice_group_regs::get_register_p() now is actually called too
	- bugfix init  of Text_item::pos_i_

pl 56.jnc1
 	- toccata-fuga-in-E.ly, excerpts with real-life collisions
 	- \{l,r}{b,f}{toe,heel} --- using cmsy fonts...
 	- pedal.ly 

pl 55.jcn1
	- mi2mu man page
	- make doc fixlet
	- \[lr]heel \[lr]toe scripts (happy pedal studies, pa)
	- lyric with width
	- removal of some example files

pl 56.mb:
	- last duration fix
	- makefile fixes
	- space rest
	- swedish note name update

******
pl 56
	- Massive Rest/Stem/Collision/Note_column rewrite: resolve
notehead/rest ambiguities and bugs. eg, [c8 r8 c8] 

pl 54.jnc1
	- standchen.ly: repeats; lyricii to end
	- convert-mudela: help + usage
	- fixed midi key/meter-change (triggered by martien.ly) bug

******
April 23
pl 55
	- staff-side robustification
	- script-on-rest bug
	- doc update
	- transpose syntax
******
pl 54
	- bugfix Colhpos.cc::OK assert fail.
	- Inclusion of MusixTeX MF files, 
	- detection of MF dir
pl 53.hwn
	- stacked lyrics 
	- configure/make buglets.
******
pl 53
	- spurious accidental bug.
	- simultaneity check.
	- added AUTHORS.pod
	- convert-mudela auto from guess
	- include -> \include